Fix dropdown: no gap, prevent click bug

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3,11 +3,15 @@
 .dropdown {
   position: relative;
 }
+.dropdown-toggle {
+  cursor: pointer;
+}
 .dropdown-menu {
   display: none;
   position: absolute;
   right: 0;
-  top: 1.8em;
+  top: 100%;
+  padding-top: 0.3em;
   background: var(--background-color);
   border: 1px dashed var(--text-color);
   list-style: none !important;
@@ -28,7 +32,9 @@
 .dropdown-menu li a {
   display: block;
   padding: 0.2em 1em;
+  text-decoration: none;
 }
-.dropdown:hover .dropdown-menu {
+.dropdown:hover > .dropdown-menu,
+.dropdown-menu:hover {
   display: block;
 }
